@@ -52,6 +52,7 @@ GBB.locales = {
 		["CboxOnDebug"]="Show debug information",
 		["CboxNotifyChat"]="On new request make a chat notification",
 		["CboxNotifySound"]="On new request make a sound notification",
+		["CboxFilterTravel"]="Filter travel requests",
 		["CboxRemoveRealm"]="Always remove Realm",
 		["CboxCharFilterLevel"]="Filter on recommended level ranges",
 		["CboxColorOnLevel"]="Highlight dungeons on recommended level ranges",
@@ -178,6 +179,7 @@ GBB.locales = {
 	["CboxNotfiyInraid"] = "Aktiv in Schlachtzuginstanzen",
 	["CboxNotifyChat"] = "Bei neuer Anfrage eine Nachricht senden",
 	["CboxNotifySound"] = "Bei neuer Anfrage ein Geräusch abspielen",
+	["CboxFilterTravel"]="Filter travel requests",
 	["CboxRemoveRealm"]="Realm immer entfernen",
 	["CboxOnDebug"] = "Debug-Informationen anzeigen",
 	["CboxOneLineNotification"] = "Kurze einzeilige Chatnachricht",
@@ -291,6 +293,7 @@ GBB.locales = {
 	["CboxOnDebug"]="Afficher les informations de débogage",
 	["CboxNotifyChat"]="Sur nouvelle demande, faire une notification de chat",
 	["CboxNotifySound"]="Sur nouvelle demande, faire une notification sonore",
+	["CboxFilterTravel"]="Filter travel requests",
 	["CboxRemoveRealm"]="Toujours supprimer Realm",
 	["CboxCharFilterLevel"]="Filtre sur les plages de niveaux recommandés",
 	["CboxColorOnLevel"]="Faire ressortir les donjons sur les plages de niveaux recommandés",
@@ -407,6 +410,7 @@ GBB.locales = {
 		["CboxNotfiyInraid"]="Включить в рейдовом подземелье",
 		["CboxNotifyChat"]="Уведомлять о новых запросах в чате",
 		["CboxNotifySound"]="Звуовое уведомление о новых событиях",
+		["CboxFilterTravel"]="Filter travel requests",
 		["CboxRemoveRealm"]="Всегда удаляйте Realm",
 		["CboxOnDebug"]="Показать отладочную информацию",
 		["CboxOneLineNotification"]="Маленькое однострочное уведомление в чате",
@@ -518,6 +522,7 @@ GBB.locales = {
 		["CboxOnDebug"]="顯示除錯資訊",
 		["CboxNotifyChat"]="有新尋求組隊時顯示聊天通知",
 		["CboxNotifySound"]="有新尋求組隊時顯示聲音通知",
+		["CboxFilterTravel"]="Filter travel requests",
 		["CboxRemoveRealm"]="始終刪除領域",
 		["CboxCharFilterLevel"]="過濾建議的等級區間",
 		["CboxColorOnLevel"]="強調地下城建議等級區間",
@@ -646,6 +651,7 @@ GBB.locales = {
 		["CboxOnDebug"]="显示除錯咨询",
 		["CboxNotifyChat"]="有新寻求组队时显示聊天通知",
 		["CboxNotifySound"]="有新寻求组队时进行声音提示",
+		["CboxFilterTravel"]="Filter travel requests",
 		["CboxRemoveRealm"]="始终删除境界",
 		["CboxCharFilterLevel"]="过滤建议的等级区间",
 		["CboxColorOnLevel"]="强调地下城建议等级区间",
